--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "homepage": "https://github.com/Bigismall/es6beztajemnic#readme",
   "devDependencies": {
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "run-sequence": "^1.2.2"
+    "gulp-sourcemaps": "^1.6.0"
   }
 }
