--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.6.0"
+  },
+  "dependencies": {
+    "babel-runtime": "^6.11.6"
   }
 }
